--- a/grc338/website-content-hierarchy/about.html
+++ b/grc338/website-content-hierarchy/about.html
@@ -6,20 +6,24 @@
             <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />  
             <meta http-equiv="Pragma" content="no-cache" />  
             <meta http-equiv="Expires" content="0" />  
-            <title>Untitled Document</title>  
+            <title>Java House</title> 
+            <link rel="stylesheet" type="text/css" href="style.css">
+
         </head>   
         <body>  
             <header>
                 <h1>Java House</h1>
-                <h1><a href="index.html"><img src="images/logo.jpg" alt="Java House Logo"></a></h1>
+                <h1><a href="index.html"><img src="images/logo.jpeg" alt="Java House Logo"></a></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="location.html">Location</a></li>
                     </ul>
                 </nav>
             </header>
+            <h2>About Us</h2>
+            <figure><img src="images/interior.jpeg" alt="customers enjoying food and coffee inside a cafe"></figure>
+            <p>Java House has been serving the San Luis Obispo community since 2015. All of our coffee is house-roasted and fair-trade. With a large selection of drinks and food items, we have something for everyone! Stop by to try one of our signature drinks and grab a bite to eat! </p>
         </body>  
     </html>
