--- a/grc338/website-content-hierarchy/index.html
+++ b/grc338/website-content-hierarchy/index.html
@@ -7,11 +7,13 @@
             <meta http-equiv="Pragma" content="no-cache" />  
             <meta http-equiv="Expires" content="0" />  
             <title>Java House</title>  
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+            <link rel="stylesheet" type="text/css" href="style.css">
         </head>   
         <body>  
             <header>
                 <h1>Java House</h1>
-                <h1><a href="index.html"><img src="images/logo.jpg" alt="Java House Logo"></a></h1>
+                <h1><a href="index.html"><img src="images/logo.jpeg" alt="Java House Logo"></a></h1>
                 <nav>
                     <ul>
                         <li><a href="about.html">About</a></li>
@@ -20,6 +22,7 @@
                     </ul>
                 </nav>
             </header>
-            <figure><img src="images/coffee.jpg" alt="Cup of Coffee"></figure>
+            <h2>Welcome to Java House!</h2>
+            <figure><img src="images/coffee.jpeg" alt="cup of coffee"></figure>
         </body>  
     </html>
