--- a/grc338/website-content-hierarchy/location.html
+++ b/grc338/website-content-hierarchy/location.html
@@ -6,20 +6,27 @@
             <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />  
             <meta http-equiv="Pragma" content="no-cache" />  
             <meta http-equiv="Expires" content="0" />  
-            <title>Untitled Document</title>  
+            <title>Java House</title> 
+            <link rel="stylesheet" type="text/css" href="style.css">
+
         </head>   
         <body>  
             <header>
                 <h1>Java House</h1>
-                <h1><a href="index.html"><img src="images/logo.jpg" alt="Java House Logo"></a></h1>
+                <h1><a href="index.html"><img src="images/logo.jpeg" alt="Java House Logo"></a></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="location.html">Location</a></li>
                     </ul>
                 </nav>
             </header>
+            <h2>Location</h2>
+            <address>Visit us at:<br>
+                102 Higuera Street<br>
+                San Luis Obispo, 93401<br>
+            </address>
+            <figure><img src="images/exterior.jpeg" alt="the outside of a coffeehouse"></figure>
         </body>  
     </html>
