--- a/grc338/website-content-hierarchy/menu.html
+++ b/grc338/website-content-hierarchy/menu.html
@@ -6,15 +6,16 @@
             <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />  
             <meta http-equiv="Pragma" content="no-cache" />  
             <meta http-equiv="Expires" content="0" />  
-            <title>Untitled Document</title>  
+            <title>Java House</title>  
+            <link rel="stylesheet" type="text/css" href="style.css">
+
         </head>   
         <body>  
             <header>
                 <h1>Java House</h1>
-                <h1><a href="index.html"><img src="images/logo.jpg" alt="Java House Logo"></a></h1>
+                <h1><a href="index.html"><img src="images/logo.jpeg" alt="Java House Logo"></a></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="location.html">Location</a></li>
@@ -22,7 +23,7 @@
                 </nav>
             </header>
             <h2>Menu</h2>
-            <figure><img src="images/pastry.jpg" alt="Close-up of a pastry on a plate"></figure>
+            <figure><img src="images/bagel.jpeg" alt="Close-up of an open-face bagel"></figure>
             <h3>Breakfast</h3>
             <ul>
                 <li>
