--- a/grc338/website-mobile-first/about.html
+++ b/grc338/website-mobile-first/about.html
@@ -14,7 +14,7 @@
         <body>  
             <header>
         
-                <h1><a href="index.html"><img class = "logo" src="images/logo.png" alt="Java House Logo"></a></h1>
+                <h1><a href="index.html"><img class = "logo" src="images/logo.png" alt="Java House Logo."></a></h1>
                 <nav>
                     <ul>
                         <li><a href="about.html">About</a></li>
