--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -26,6 +26,7 @@
                             <li><a href="#">Shop</a></li>
                             <li><a href="#">Learn</a></li>
                             <li><a href="#">Explore</a></li>
+                            <li><a href="newsletter.html">Subscribe</a></li>
                         </ul>
                     </nav>
                 </header>
