--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -62,7 +62,7 @@
                             </figure>
                                 <h3>The Best Coffee in S.F.</h3>
                                 <p>
-                                    Whether you want to fuel up in the morning or dive into a flight of pour-overs, San Francisco has something for everyone. From beloved European-style cafes to no-nonsense roasteries, these are our picks for where to find the best coffee in San Francisco.
+                                    From beloved European-style cafes to no-nonsense roasteries, these are our picks for where to find the best coffee in San Francisco.
                                 </p>
                         </a>    
                     </section>
@@ -119,7 +119,7 @@
                     <section class="tertiary">
                                 <h3>The Best Bars in S.F.</h3>
                                 <p>
-                                    San Francisco's bars are some of the best in the world, whether you are looking for a perfected craft cocktail, a neighborhood pub, or a tiki getaway. These are the bars you should frequent right now, from buzzy outdoor patios to hip Caribbean-themed watering holes and dimly lit speakeasies.
+                                    San Francisco's bars are some of the best in the world, whether you are looking for a perfected craft cocktail, a neighborhood pub, or a tiki getaway. These are the bars you should frequent right now.
                                 </p>
                     </section>
                     
@@ -133,14 +133,7 @@
                     <section class="tertiary"> 
                                 <h3>Best Restaurants in Chinatown</h3>
                                 <p>
-                                    The streets of Chinatown are lined with restaurants, bakeries, and cafes serving everything from slurp-worthy noodles to freshly baked pastries and other dishes that highlight the many different regions of China and its incredible diversity. Here are 16 of the best spots in Chinatown.
-                                </p>
-                    </section>
-                    
-                    <section class="tertiary"> 
-                                <h3>Best Bookstores in San Francisco</h3>
-                                <p>
-                                    Rumors of the death of the indy bookstores are greatly exaggerated and Amazon doesn’t certainly have the last word on what you should read, especially in San Francisco. SF overflows with creative literary juice and there are a lot of bookstores here ready to serve it up with expertise.
+                                    The streets of Chinatown are lined with restaurants, bakeries, and cafes serving everything from slurp-worthy noodles to freshly baked pastries. Here are 16 of the best food stops in Chinatown.
                                 </p>
                     </section>
  
